refactor (breast-cancer): full data and workflows

--- a/binder/requirements.txt
+++ b/binder/requirements.txt
@@ -7,3 +7,11 @@ numpy
 gseapy
 scikit-learn
 seaborn
+
+# PlantUML dependencies
+iplantuml
+
+# Orange 3 and dependencies
+PyQt5
+PyQtWebEngine
+orange3
